[package]
name          = "cw721-non-transferable"
authors       = ["Eliseo Cohen <eliseoci@users.noreply.github.com>"]
description   = "Non-transferable CW721 NFT example"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
base64 = "0.21.2"
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-ownable      = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
hex = "0.4.3"
hex-literal = "0.4.1"
schemars        = { workspace = true }
serde           = { workspace = true }
serde-json-wasm = "1.0.0"
sha2 = "0.9"
thiserror.workspace = true
